# llm_attack_defense_arena

./: .gitignore  attack.py  attack_template.py  defence.py  defence_template.py  dockerfile  download_models.py  finetune.py  global_config.py  global_utils.py  install.ipynb  main.py  models.py  predict.py  prompt_process.py  readme  readme.md  requirements.txt  utils.py
Attacks/jailbroken/: .gitignore  pyproject.toml
Attacks/jailbroken/jailbroken/: backends.py  loaders.py  settings.py  utils.py  wrappers.py
Attacks/jailbroken/jailbroken/templates/: auto_obfuscation.jinja  auto_obfuscation_obfuscator.jinja  auto_payload_splitting.jinja  auto_payload_splitting_flagger.jinja  combination_1.jinja  combination_2.jinja  combination_3.jinja  dev_mode_with_ranti_1.jinja  dev_mode_with_ranti_2.jinja  evil_system_prompt.jinja  few_shot_json.jinja
Attacks/jailbroken/jailbroken/templates/jinja_jailbreaks/: AIM.jinja  dev_mode_v2.jinja  distractors.jinja  distractors_negated.jinja  evil_confidant.jinja  poems.jinja  prefix_injection.jinja  prefix_injection_hello.jinja  refusal_suppression.jinja  refusal_suppression_inv.jinja  style_injection_json.jinja  style_injection_short.jinja  wikipedia.jinja  wikipedia_with_title.jinja
Attacks/jailbroken/jailbroken/templates/other_templates/: prefix_injection_absolutely.jinja
Attacks/jailbroken/results/: args.json  responses.jsonl
Attacks/jailbroken/scripts/: dedup_generated.py  jailbreak_all.py  jailbreak_generated.py  prompt_generation.py
Attacks/jailbroken/scripts/templates/other_prompts/: prompt_generation.jinja  (+1 more)
(+202 files in other folders)
